Archivo Xml y el Xsmlt terminados

--- a/OrdenPizza.csproj
+++ b/OrdenPizza.csproj
@@ -119,7 +119,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Xslt\Orden_Pizza.xslt" />
+    <Content Include="Xslt\Orden_Pizza.xslt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
